#2316 Further rationalisation.
One of the changes pertains to the removal of a workaround for a H2-related limitation.